--- a/geolocate.service
+++ b/geolocate.service
@@ -4,6 +4,8 @@ Wants=network-online.target
 After=network.target network-online.target
 
 [Service]
+Restart=always
+RestartSec=1800s
 ExecStart=/usr/bin/geolocate print
 
 [Install]
